--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 
 
 
-<meta property="og:site_name" content="My New Hugo Site">
+<meta property="og:site_name" content="Sean&#39;s Site">
 <meta property="og:title" content="Page not found">
 <meta property="og:description" content="This page was not found.">
 
@@ -75,9 +75,9 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "https://example.org/",
+      "url": "https://uocli.me/",
       "inLanguage": "en",
-      "name": "My New Hugo Site",
+      "name": "Sean's Site",
       "description": "",
       "publisher": ""
     }
@@ -88,7 +88,7 @@
 
 
 
-<link rel="stylesheet" href="https://example.org/css/main.min.6d13374744675dde1cf540e161977fd825c4ea15624061069e20e04fc8cdbf4e.css" integrity="sha256-bRM3R0RnXd4c9UDhYZd/2CXE6hViQGEGniDgT8jNv04=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://uocli.me/css/main.min.6d13374744675dde1cf540e161977fd825c4ea15624061069e20e04fc8cdbf4e.css" integrity="sha256-bRM3R0RnXd4c9UDhYZd/2CXE6hViQGEGniDgT8jNv04=" crossorigin="anonymous">
 
 
 
@@ -103,7 +103,7 @@
   
 
   
-  <link rel="stylesheet" href="https://example.org/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://uocli.me/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
 
 </noscript>
 
@@ -121,7 +121,7 @@
 
 
 
-<script src="https://example.org/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
+<script src="https://uocli.me/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
 
   </head>
 
@@ -130,7 +130,7 @@
     <header>
       
 
-  <a href="/">My New Hugo Site</a>
+  <a href="/">Sean&#39;s Site</a>
 
 
 
