Updated base url

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="og:site_name" content="Sean&#39;s Site">
 <meta property="og:title" content="Sean&#39;s Site">
 
-  <meta property="og:url" content="https://uocli.me/">
+  <meta property="og:url" content="https://uocli.me/blog/">
 
 
 
@@ -55,7 +55,7 @@
 
 
 
-  <link rel="alternate" type="application/rss+xml" href="https://uocli.me/index.xml" title="Sean&#39;s Site">
+  <link rel="alternate" type="application/rss+xml" href="https://uocli.me/blog/index.xml" title="Sean&#39;s Site">
 
 
 
@@ -79,7 +79,7 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "https://uocli.me/",
+      "url": "https://uocli.me/blog/",
       "inLanguage": "en",
       "name": "Sean's Site",
       "description": "",
@@ -92,7 +92,7 @@
 
 
 
-<link rel="stylesheet" href="https://uocli.me/css/main.min.6d13374744675dde1cf540e161977fd825c4ea15624061069e20e04fc8cdbf4e.css" integrity="sha256-bRM3R0RnXd4c9UDhYZd/2CXE6hViQGEGniDgT8jNv04=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://uocli.me/blog/css/main.min.6d13374744675dde1cf540e161977fd825c4ea15624061069e20e04fc8cdbf4e.css" integrity="sha256-bRM3R0RnXd4c9UDhYZd/2CXE6hViQGEGniDgT8jNv04=" crossorigin="anonymous">
 
 
 
@@ -107,16 +107,16 @@
   
 
   
-  <link rel="stylesheet" href="https://uocli.me/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://uocli.me/blog/css/noscript.min.c63aa197c1cdbb9146936f72b208955bb7257979da77fce3911555309716908d.css" integrity="sha256-xjqhl8HNu5FGk29ysgiVW7cleXnad/zjkRVVMJcWkI0=" crossorigin="anonymous">
 
 </noscript>
 
 
 
-<link rel="preload" href="/fonts/open-sans-v34-latin-700.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/open-sans-v34-latin-italic.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/open-sans-v34-latin-regular.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/blog/fonts/open-sans-v34-latin-700.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/blog/fonts/open-sans-v34-latin-italic.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/blog/fonts/open-sans-v34-latin-regular.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="/blog/fonts/oswald-v29-latin-700.woff2" as="font" crossorigin="anonymous">
 
 
 
@@ -125,7 +125,7 @@
 
 
 
-<script src="https://uocli.me/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
+<script src="https://uocli.me/blog/js/main.e825f7044baffdc7a30a63e6a25f9fb77c953bb2609eb106c059c15274e099a5.js" integrity="sha256-6CX3BEuv/cejCmPmol&#43;ft3yVO7JgnrEGwFnBUnTgmaU=" crossorigin="anonymous"></script>
 
   </head>
 
@@ -134,7 +134,7 @@
     <header>
       
 
-  <a href="/">Sean&#39;s Site</a>
+  <a href="/blog">Sean&#39;s Site</a>
 
 
 
@@ -211,7 +211,7 @@
 
 
 <div class="req-js">
-  <button class="outline-dashed" title="Change to light/dark mode."><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><use xlink:href="/img/bundle.min.ae45e7a9a0a65150dd900a58f35fe84d.svg#adjust"/></svg></button><input class="outline-dashed" type="color" list="presets" value="1f676b" title="Change accent color." aria-label="Change accent color."><datalist id="presets"><option value="1f676b"><option value="1dbc91"></datalist>
+  <button class="outline-dashed" title="Change to light/dark mode."><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><use xlink:href="/blog/img/bundle.min.ae45e7a9a0a65150dd900a58f35fe84d.svg#adjust"/></svg></button><input class="outline-dashed" type="color" list="presets" value="1f676b" title="Change accent color." aria-label="Change accent color."><datalist id="presets"><option value="1f676b"><option value="1dbc91"></datalist>
 </div>
 
 
